--- a/_sources/lectures/204-Andy-lectures/20_time_series.ipynb
+++ b/_sources/lectures/204-Andy-lectures/20_time_series.ipynb
@@ -116,7 +116,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "fragment"
     },
     "tags": []
    },
@@ -195,13 +195,17 @@
    "cell_type": "markdown",
    "id": "968bfa87",
    "metadata": {
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
-    }
+    },
+    "tags": []
    },
    "source": [
     "- We have a time-ordered sequence of data points.\n",
     "- This type of data is distinctive because it is inherently sequential, with an intrinsic order based on time.\n",
+    "- Previously we have assumed there is no relationship between points i.e. order doesn't matter.\n",
+    "  - This is sometimes referred to as assuming observations are exchangeable\n",
     "- The number of bikes available at a station at one point in time is often related to the number of bikes at earlier times. \n",
     "- This is a **time-series forecasting** problem."
    ]
