--- a/_sources/lectures/tutorials/07_Time_series.ipynb
+++ b/_sources/lectures/tutorials/07_Time_series.ipynb
@@ -2564,7 +2564,7 @@
     }
    },
    "source": [
-    "Last, here are some more options, for you to check out:\n",
+    "Last, here are some more options for lagged features to check out:\n",
     "\n",
     "- We could also create a lagged version of the target. In fact, this dataset already has that built in! `RainToday` is the lagged version of the target `RainTomorrow`.\n",
     "- We could also create lagged version of other features, or more lags"
